[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yama"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
]
optional-dependencies.dev = [
    "ruff>=0.2.1",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "yama/__init__.py"
