[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yama"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "sqlalchemy",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]
optional-dependencies.dev = [
    "ruff",
    "mypy",
    "pytest",
]
dynamic = ["version"]

[tool.hatch.version]
path = "yama/__init__.py"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "RUF100"]

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
